updated JS script and added CSS file

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, Paper, Scissors v2</title>
+    <title>OMO - Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-    <h1>Rock, Paper, Scissors v2</h1>
+    <h1>A Rock, Paper, Scissors Game</h1>
+    <p><em>This JavaScript activity was adapted originally from our previous code solution for the same game name. I added my personal flavor by using HP (hit points) system just like what we see in games, instead of the usual raise to nth or something similar. I started with the logic part, but hopefully I'll be able to add decent visuals to it after applying HTML and CSS. Stay tuned!</em></p>
 
     <script src="script.js"></script>
 </body>
